Bug 183244 - Messages when opening konsole - Attempt to use QAction "change-profile" with KXMLGUIFactory!/Undecodable seq
Summary: Messages when opening konsole - Attempt to use QAction "change-profile" with ...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-05 00:07 UTC by Fred Wells
Modified: 2011-04-30 17:40 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fred Wells 2009-02-05 00:07:44 UTC
Version:            (using KDE 4.2.0)
Installed from:    RedHat RPMs

Fedora 10
KDE4.2

Get the following message when invoking konsole from another terminal/konsole.

  Attempt to use QAction "change-profile" with KXMLGUIFactory!

Occasionally see the this message as well....

  Undecodable sequence: \001b(hex)[?1034h
Comment 1 MartinG 2009-03-05 23:39:51 UTC
I can confirm that I get
  Undecodable sequence: \001b(hex)[?1034h
when I invoke a konsole from another one, both on kdelibs-4.2.1-1.fc11.i586 (from rawhide or koji) and standard stable Fedora 10 (kdelibs-4.2.0-15.fc10.x86_64). For the latter this is how to reproduce:

 $ konsole -e ssh localhost
 konsole(5868): Attempt to use QAction "change-profile" with KXMLGUIFactory!
 thira:~:$ Undecodable sequence: \001b(hex)[?1034h
Comment 2 Fred Wells 2009-05-20 05:20:56 UTC
Still present in 4.2.3.
Comment 3 Bernhard Rosenkraenzer 2009-07-20 18:42:13 UTC
Happens here (Ark Linux with fairly current KDE 4.3 snapshot) too -- the cause is the "mm=\E[1034h" entry in /etc/termcap for xterm-basic (common to pretty much any system that builds /etc/termcap from ncurses sources).

(It comes from the smm=\E[?1034h entry in xterm-basic, line 3285 in misc/terminfo.src in current ncurses).

Removing that bit from /etc/termcap fixes it and doesn't seem to cause any new wrongdoing (at least as long as konsole is the only xterm implementation being used and the keyboard is a standard PC one).
Comment 4 Kurt Hindenburg 2009-08-31 02:06:36 UTC
THe KXMLGUIFactory warnings I will look at sometime.

From Konsole:
konsole(16199)/kdeui (kdelibs): Attempt to use QAction "change-profile" with KXMLGUIFactory!


From KPart:
konqueror(16238)/kdeui (kdelibs): Attempt to use QAction "change-profile" with KXMLGUIFactory!                                                                
konqueror(16238)/kdeui (kdelibs): Attempt to use QAction "manage-profiles" with KXMLGUIFactory!
Comment 5 MartinG 2009-10-26 23:41:49 UTC
So, regarding the workaround proposed in #3 - I have this:

$ for f in `locate terminfo`;do grep  1034h $f;done
Binary file /usr/share/terminfo/s/screen.xterm-new matches
Binary file /usr/share/terminfo/s/screen.xterm-xfree86 matches
Binary file /usr/share/terminfo/x/xterm matches
Binary file /usr/share/terminfo/x/xterm-1002 matches
Binary file /usr/share/terminfo/x/xterm-1003 matches
Binary file /usr/share/terminfo/x/xterm-16color matches
Binary file /usr/share/terminfo/x/xterm-256color matches
Binary file /usr/share/terminfo/x/xterm-88color matches
Binary file /usr/share/terminfo/x/xterm-basic matches
Binary file /usr/share/terminfo/x/xterm-hp matches
Binary file /usr/share/terminfo/x/xterm-new matches
Binary file /usr/share/terminfo/x/xterm-nic matches
Binary file /usr/share/terminfo/x/xterm-noapp matches
Binary file /usr/share/terminfo/x/xterm-pcolor matches
Binary file /usr/share/terminfo/x/xterm-sco matches
Binary file /usr/share/terminfo/x/xterm-sun matches
Binary file /usr/share/terminfo/x/xterm-vt220 matches

but my /etc/terminfo/ dir is empty, and I don't have /etc/termcap on my Fedora Rawhide (pre F12) system.

Furthermore:
$ locate termcap
/usr/lib/perl5/5.10.0/termcap.pl
/usr/share/man/man5/termcap.5.gz
/usr/share/vte/termcap
/usr/share/vte/termcap/xterm


Any suggestions? (this little bug is in fact bugging me quite alot:))
Comment 6 Paul-Sebastian Manole 2010-02-24 11:47:03 UTC
$ konsole
konsole(1822)/kdeui (kdelibs): Attempt to use QAction "change-profile" with KXMLGUIFactory! 
sebi@miko:~/Documents$ QInotifyFileSystemWatcherEngine::addPaths: inotify_add_watch failed: No such file or directory
QFileSystemWatcher: failed to add paths: /home/sebi/.config/ibus/bus
Bus::open: Can not get ibus-daemon's address. 
IBusInputContext::createInputContext: no connection to ibus-daemon 


=====================
And maybe more than a dozen other apps print "QFileSystemWatcher: failed to add paths: /home/sebi/.config/ibus/bus" or other errors related to ibus.

p   ibus                            - New input method framework using dbus

It is not installed on Lucid Lynx alpha (network install 2 days ago, so it has the latest packages from the repository).

After installing it, running ibus-setup, which started the daemon and said:

IBus has been started! If you can not use IBus, please add below lines in $HOME/.bashrc, and relogin your desktop.
  export GTK_IM_MODULE=ibus
  export XMODIFIERS=@im=ibus
  export QT_IM_MODULE=ibus

, running konsole from a terminal only says:

$ konsole
konsole(2220)/kdeui (kdelibs): Attempt to use QAction "change-profile" with KXMLGUIFactory!
Comment 7 Kurt Hindenburg 2010-03-03 16:32:40 UTC
SVN commit 1098369 by hindenburg:

Fix the warning message 'Attempt to use QAction "change-profile" with KXMLGUIFactory!'

CCBUG: 183244


 M  +7 -6      SessionController.cpp  
 M  +2 -1      SessionController.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1098369
Comment 8 Kurt Hindenburg 2010-06-04 17:42:24 UTC
With a recent version, I don't see the QAction outputs.  I'll fix the  1034h warning shortly
Comment 9 Kurt Hindenburg 2010-06-04 17:57:12 UTC
SVN commit 1134569 by hindenburg:

Ignore Konsole's message "Undecodable sequence: \\001b(hex)[?1034h" that new ncurses/xterm has in their terminfo.
I believe 1034h deals with activating 8bitinput.

CCBUG: 183244


 M  +2 -0      Vt102Emulation.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134569
Comment 10 Kurt Hindenburg 2010-06-04 18:21:41 UTC
SVN commit 1134578 by hindenburg:

Ignore Konsole's message "Undecodable sequence: \\001b(hex)[?1034h" that new ncurses/xterm has in their terminfo.
I believe 1034h deals with activating 8bitinput.

CCBUG: 183244


 M  +2 -0      Vt102Emulation.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134578
Comment 11 Laurent Bonnaud 2011-01-10 09:38:07 UTC
This bug is still in KDE 4.5.95 aka 4.6RC2 in Ubuntu with this package version:

Package: konsole
Version: 4:4.5.95-0ubuntu1~maverick~ppa1

The error message is slightly different:

$ konsole
konsole(11694)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory!
konsole(11694)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory!
Comment 12 Kurt Hindenburg 2011-01-23 17:31:40 UTC
SVN commit 1216478 by hindenburg:

Remove unused code that was used in the previous menu stucture.

This removes the warning:
konsole(11694)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory!

BUG: 183244


 M  +0 -5      desktop/konsoleui.rc  
 M  +0 -3      src/MainWindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1216478
Comment 13 Kurt Hindenburg 2011-01-23 18:42:49 UTC
SVN commit 1216491 by hindenburg:

Remove unused code that was used in the previous menu stucture.

This removes the warning:
konsole(11694)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory!

CCBUG: 183244


 M  +0 -5      desktop/konsoleui.rc  
 M  +0 -3      src/MainWindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1216491
Comment 14 bkorb 2011-04-29 22:31:04 UTC
Since this causes me to be unable to run cscope as the konsole application,
some workaround hints would be nice here, too.  Thank you.
Comment 15 Laurent Bonnaud 2011-04-30 17:40:00 UTC
This bug is fixed in KDE 4.6.2 in Ubuntu natty and in the KDE 4.6 backport for maverick.