Remove unused code that was used in the previous menu stucture.

This removes the warning:
konsole(11694)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory!

BUG: 183244

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1216478